Major improvements: CTA contrast, WhatsApp fix, new sections (transformations, blog, chatbot), mobile optimizations

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
       <div class="navbar-menu" id="navbarMenu">
         <ul class="navbar-links">
           <li><a href="#method">Méthode</a></li>
+          <li><a href="#transformations">Résultats</a></li>
           <li><a href="#pricing">Tarifs</a></li>
           <li><a href="#testimonials">Témoignages</a></li>
-          <li><a href="#about">À propos</a></li>
+          <li><a href="#blog">Blog</a></li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
         <a href="#bilan" class="btn btn-primary btn-sm">
@@ -289,6 +290,156 @@
 
   <!-- Wave Separator -->
   <div class="wave-separator-ocean wave-separator-sunset">
+    <svg class="animated-wave" viewBox="0 0 1440 100" preserveAspectRatio="none">
+      <path class="wave-path wave-back" d="M0,50 C360,100 540,0 720,50 C900,100 1080,0 1440,50 L1440,100 L0,100 Z" />
+      <path class="wave-path wave-mid"
+        d="M0,60 C280,20 460,80 640,40 C820,0 1000,60 1180,30 C1360,0 1400,40 1440,50 L1440,100 L0,100 Z" />
+      <path class="wave-path wave-front"
+        d="M0,70 C200,40 400,90 600,50 C800,10 1000,70 1200,40 C1350,20 1400,50 1440,60 L1440,100 L0,100 Z" />
+    </svg>
+  </div>
+
+  <!-- ========== TRANSFORMATIONS SECTION (BEFORE/AFTER) ========== -->
+  <section class="section transformations" id="transformations">
+    <div class="container">
+      <div class="section-header reveal">
+        <h2>Transformations Réelles 📸</h2>
+        <p>Des résultats concrets obtenus par mes clients avec ma méthode</p>
+      </div>
+
+      <div class="transformations-grid">
+        <!-- Transformation 1 -->
+        <div class="transformation-card reveal">
+          <div class="transformation-images">
+            <div class="transformation-before">
+              😔
+              <span class="transformation-label">Avant</span>
+            </div>
+            <div class="transformation-after">
+              💪
+              <span class="transformation-label">Après</span>
+            </div>
+            <div class="transformation-arrow">→</div>
+          </div>
+          <div class="transformation-info">
+            <h4 class="transformation-name">Sophie M.</h4>
+            <p class="transformation-result">-12kg de graisse</p>
+            <p class="transformation-duration">🕐 8 semaines de suivi</p>
+          </div>
+        </div>
+
+        <!-- Transformation 2 -->
+        <div class="transformation-card reveal">
+          <div class="transformation-images">
+            <div class="transformation-before">
+              😐
+              <span class="transformation-label">Avant</span>
+            </div>
+            <div class="transformation-after">
+              🔥
+              <span class="transformation-label">Après</span>
+            </div>
+            <div class="transformation-arrow">→</div>
+          </div>
+          <div class="transformation-info">
+            <h4 class="transformation-name">Thomas L.</h4>
+            <p class="transformation-result">+8kg de muscle sec</p>
+            <p class="transformation-duration">🕐 12 semaines de suivi</p>
+          </div>
+        </div>
+
+        <!-- Transformation 3 -->
+        <div class="transformation-card reveal">
+          <div class="transformation-images">
+            <div class="transformation-before">
+              😞
+              <span class="transformation-label">Avant</span>
+            </div>
+            <div class="transformation-after">
+              🌟
+              <span class="transformation-label">Après</span>
+            </div>
+            <div class="transformation-arrow">→</div>
+          </div>
+          <div class="transformation-info">
+            <h4 class="transformation-name">Marie D.</h4>
+            <p class="transformation-result">-7kg, silhouette redessinée</p>
+            <p class="transformation-duration">🕐 6 semaines de suivi</p>
+          </div>
+        </div>
+
+        <!-- Transformation 4 -->
+        <div class="transformation-card reveal">
+          <div class="transformation-images">
+            <div class="transformation-before">
+              🙁
+              <span class="transformation-label">Avant</span>
+            </div>
+            <div class="transformation-after">
+              💥
+              <span class="transformation-label">Après</span>
+            </div>
+            <div class="transformation-arrow">→</div>
+          </div>
+          <div class="transformation-info">
+            <h4 class="transformation-name">Lucas P.</h4>
+            <p class="transformation-result">-15kg, confiance retrouvée</p>
+            <p class="transformation-duration">🕐 10 semaines de suivi</p>
+          </div>
+        </div>
+
+        <!-- Transformation 5 -->
+        <div class="transformation-card reveal">
+          <div class="transformation-images">
+            <div class="transformation-before">
+              😕
+              <span class="transformation-label">Avant</span>
+            </div>
+            <div class="transformation-after">
+              ⚡
+              <span class="transformation-label">Après</span>
+            </div>
+            <div class="transformation-arrow">→</div>
+          </div>
+          <div class="transformation-info">
+            <h4 class="transformation-name">Julie R.</h4>
+            <p class="transformation-result">Ventre plat, -3 tailles</p>
+            <p class="transformation-duration">🕐 8 semaines de suivi</p>
+          </div>
+        </div>
+
+        <!-- Transformation 6 -->
+        <div class="transformation-card reveal">
+          <div class="transformation-images">
+            <div class="transformation-before">
+              😶
+              <span class="transformation-label">Avant</span>
+            </div>
+            <div class="transformation-after">
+              🏆
+              <span class="transformation-label">Après</span>
+            </div>
+            <div class="transformation-arrow">→</div>
+          </div>
+          <div class="transformation-info">
+            <h4 class="transformation-name">Marc B.</h4>
+            <p class="transformation-result">+12kg de muscle, shape parfait</p>
+            <p class="transformation-duration">🕐 16 semaines de suivi</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Section CTA -->
+      <div class="section-cta reveal">
+        <a href="#bilan" class="btn btn-primary btn-lg">
+          📸 Créer ma transformation
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Wave Separator -->
+  <div class="wave-separator-ocean">
     <svg class="animated-wave" viewBox="0 0 1440 100" preserveAspectRatio="none">
       <path class="wave-path wave-back" d="M0,50 C360,100 540,0 720,50 C900,100 1080,0 1440,50 L1440,100 L0,100 Z" />
       <path class="wave-path wave-mid"
@@ -631,6 +782,91 @@
     </svg>
   </div>
 
+  <!-- ========== BLOG SECTION ========== -->
+  <section class="section blog" id="blog">
+    <div class="container">
+      <div class="section-header reveal">
+        <h2>Conseils & Articles 📚</h2>
+        <p>Des tips nutrition, entraînement et motivation pour t'aider à atteindre tes objectifs</p>
+      </div>
+
+      <div class="blog-grid">
+        <!-- Blog Article 1 -->
+        <article class="blog-card reveal">
+          <div class="blog-card-image">
+            🥗
+            <span class="blog-card-category">Nutrition</span>
+          </div>
+          <div class="blog-card-content">
+            <h3 class="blog-card-title">5 Erreurs de Nutrition qui Bloquent ta Perte de Poids</h3>
+            <p class="blog-card-excerpt">
+              Découvre les erreurs les plus courantes que je vois chez mes clients et comment les éviter pour enfin voir
+              des résultats durables.
+            </p>
+            <div class="blog-card-meta">
+              <span class="blog-card-date">📅 15 Décembre 2024</span>
+              <a href="#" class="blog-card-read-more">Lire →</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Blog Article 2 -->
+        <article class="blog-card reveal">
+          <div class="blog-card-image">
+            💪
+            <span class="blog-card-category">Entraînement</span>
+          </div>
+          <div class="blog-card-content">
+            <h3 class="blog-card-title">Comment Prendre du Muscle avec Seulement 2 Séances par Semaine</h3>
+            <p class="blog-card-excerpt">
+              Oui, c'est possible ! Voici ma méthode pour maximiser tes gains même avec un emploi du temps chargé.
+            </p>
+            <div class="blog-card-meta">
+              <span class="blog-card-date">📅 10 Décembre 2024</span>
+              <a href="#" class="blog-card-read-more">Lire →</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Blog Article 3 -->
+        <article class="blog-card reveal">
+          <div class="blog-card-image">
+            🧠
+            <span class="blog-card-category">Motivation</span>
+          </div>
+          <div class="blog-card-content">
+            <h3 class="blog-card-title">La Mentalité du Champion : Comment Rester Motivé</h3>
+            <p class="blog-card-excerpt">
+              Le secret de mes clients qui réussissent ? Leur mindset. Je te partage les techniques qui changent tout.
+            </p>
+            <div class="blog-card-meta">
+              <span class="blog-card-date">📅 5 Décembre 2024</span>
+              <a href="#" class="blog-card-read-more">Lire →</a>
+            </div>
+          </div>
+        </article>
+      </div>
+
+      <!-- Section CTA -->
+      <div class="section-cta reveal">
+        <a href="#bilan" class="btn btn-primary btn-lg">
+          📖 Passer à l'action avec Harry
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Wave Separator -->
+  <div class="wave-separator-ocean wave-separator-sunset">
+    <svg class="animated-wave" viewBox="0 0 1440 100" preserveAspectRatio="none">
+      <path class="wave-path wave-back" d="M0,50 C360,100 540,0 720,50 C900,100 1080,0 1440,50 L1440,100 L0,100 Z" />
+      <path class="wave-path wave-mid"
+        d="M0,60 C280,20 460,80 640,40 C820,0 1000,60 1180,30 C1360,0 1400,40 1440,50 L1440,100 L0,100 Z" />
+      <path class="wave-path wave-front"
+        d="M0,70 C200,40 400,90 600,50 C800,10 1000,70 1200,40 C1350,20 1400,50 1440,60 L1440,100 L0,100 Z" />
+    </svg>
+  </div>
+
   <!-- ========== CTA SECTION ========== -->
   <section class="section cta-section" id="bilan">
     <div class="container">
@@ -645,7 +881,7 @@
           <a href="https://calendly.com/harrylift" class="btn btn-primary btn-lg" target="_blank" rel="noopener">
             🏖️ Réserver mon Bilan Gratuit
           </a>
-          <a href="https://wa.me/33XXXXXXXXX" class="btn btn-secondary btn-lg" target="_blank" rel="noopener">
+          <a href="https://wa.me/33695308817" class="btn btn-secondary btn-lg" target="_blank" rel="noopener">
             📱 M'écrire sur WhatsApp
           </a>
         </div>
@@ -684,21 +920,20 @@
         </div>
 
         <div class="footer-column">
-          <h4>Légal</h4>
+          <h4>Contact</h4>
           <ul>
-            <li><a href="/mentions-legales">Mentions légales</a></li>
-            <li><a href="/politique-confidentialite">Politique de confidentialité</a></li>
-            <li><a href="/cgu">CGU</a></li>
-            <li><a href="/politique-cookies">Cookies</a></li>
+            <li>📧 coaching@harrylift.com</li>
+            <li>📞 +33 6 95 30 88 17</li>
+            <li>📍 Lyon, France</li>
           </ul>
         </div>
 
         <div class="footer-column">
-          <h4>Contact</h4>
+          <h4>Réseaux sociaux</h4>
           <ul>
-            <li>📧 coaching@harrylift.com</li>
-            <li>📞 +33 X XX XX XX XX</li>
-            <li>📍 Lyon, France</li>
+            <li><a href="https://instagram.com/harrylift" target="_blank" rel="noopener">📸 Instagram</a></li>
+            <li><a href="https://wa.me/33695308817" target="_blank" rel="noopener">💬 WhatsApp</a></li>
+            <li><a href="https://www.tiktok.com/@harrylift" target="_blank" rel="noopener">🎵 TikTok</a></li>
           </ul>
         </div>
       </div>
@@ -712,6 +947,46 @@
       </div>
     </div>
   </footer>
+
+  <!-- ========== CHATBOT WIDGET ========== -->
+  <div class="chatbot-widget" id="chatbotWidget">
+    <div class="chatbot-window">
+      <div class="chatbot-header">
+        <div class="chatbot-header-info">
+          <div class="chatbot-avatar">🌴</div>
+          <div>
+            <div class="chatbot-name">Harry Lift</div>
+            <div class="chatbot-status">En ligne</div>
+          </div>
+        </div>
+        <button class="chatbot-close" id="chatbotClose">×</button>
+      </div>
+
+      <div class="chatbot-messages" id="chatbotMessages">
+        <div class="chatbot-message bot">
+          Salut ! 👋 Je suis Harry, ton futur coach. Comment puis-je t'aider aujourd'hui ?
+        </div>
+        <div class="chatbot-message bot">
+          Tu peux me poser des questions sur mes programmes, mes tarifs, ou réserver directement ton bilan gratuit ! ☀️
+        </div>
+      </div>
+
+      <div class="chatbot-quick-actions">
+        <button class="chatbot-quick-btn" data-action="bilan">📅 Bilan gratuit</button>
+        <button class="chatbot-quick-btn" data-action="tarifs">💰 Voir les tarifs</button>
+        <button class="chatbot-quick-btn" data-action="whatsapp">💬 WhatsApp</button>
+      </div>
+
+      <div class="chatbot-input-area">
+        <input type="text" class="chatbot-input" id="chatbotInput" placeholder="Écris ton message...">
+        <button class="chatbot-send" id="chatbotSend">➤</button>
+      </div>
+    </div>
+
+    <button class="chatbot-button" id="chatbotToggle">
+      💬
+    </button>
+  </div>
 
   <!-- JavaScript -->
   <script src="js/main.js"></script>
