Enhance light mode shadows dramatically, merge Transformations and Testimonials into one combined section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
           <li><a href="#method">Méthode</a></li>
           <li><a href="#transformations">Résultats</a></li>
           <li><a href="#pricing">Tarifs</a></li>
-          <li><a href="#testimonials">Témoignages</a></li>
           <li><a href="#blog">Blog</a></li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
@@ -308,12 +307,17 @@
     </svg>
   </div>
 
-  <!-- ========== TRANSFORMATIONS SECTION (BEFORE/AFTER) ========== -->
-  <section class="section transformations" id="transformations">
+  <!-- ========== RESULTATS & TEMOIGNAGES (COMBINED SECTION) ========== -->
+  <section class="section results-testimonials" id="transformations">
     <div class="container">
       <div class="section-header reveal">
-        <h2>Transformations Réelles 📸</h2>
-        <p>Des résultats concrets obtenus par mes clients avec ma méthode</p>
+        <h2>Résultats & Témoignages 🌟</h2>
+        <p>Des transformations réelles et des avis sincères de mes clients</p>
+      </div>
+
+      <!-- Transformations Subsection -->
+      <div class="subsection-header reveal">
+        <h3>📸 Avant / Après</h3>
       </div>
 
       <div class="transformations-grid">
@@ -438,10 +442,65 @@
         </div>
       </div>
 
+      <!-- Testimonials Subsection -->
+      <div class="subsection-header reveal" style="margin-top: var(--space-16);">
+        <h3>💬 Ce qu'ils disent</h3>
+      </div>
+
+      <div class="testimonials-grid" id="testimonials">
+        <div class="testimonial-card reveal">
+          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
+          <p class="testimonial-text">
+            "Harry m'a vraiment fait comprendre que la transformation, c'est d'abord dans la tête.
+            En 6 semaines, j'ai perdu 5kg et surtout j'ai retrouvé confiance en moi.
+            Sa méthode est simple mais tellement efficace !"
+          </p>
+          <div class="testimonial-author">
+            <div class="testimonial-avatar">S</div>
+            <div class="testimonial-info">
+              <h4>Sophie M.</h4>
+              <p>-5kg en 6 semaines</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card reveal">
+          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
+          <p class="testimonial-text">
+            "Le suivi 7j/7 change tout. Harry répond toujours rapidement et ajuste mon programme
+            selon mes ressentis. C'est le premier coach qui me comprend vraiment.
+            Mon summer body est enfin une réalité !"
+          </p>
+          <div class="testimonial-author">
+            <div class="testimonial-avatar">T</div>
+            <div class="testimonial-info">
+              <h4>Thomas L.</h4>
+              <p>+8kg de muscle en 3 mois</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="testimonial-card reveal">
+          <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
+          <p class="testimonial-text">
+            "J'ai essayé beaucoup de coachs avant Harry. La différence ? Son énergie positive
+            et sa bienveillance. Il a cette chaleur antillaise qui te motive même dans les moments durs.
+            Je recommande à 100% !"
+          </p>
+          <div class="testimonial-author">
+            <div class="testimonial-avatar">M</div>
+            <div class="testimonial-info">
+              <h4>Marie D.</h4>
+              <p>Transformation complète</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Section CTA -->
       <div class="section-cta reveal">
         <a href="#bilan" class="btn btn-primary btn-lg">
-          📸 Créer ma transformation
+          ⭐ Rejoindre les 500+ transformations
         </a>
       </div>
     </div>
